--- a/public/ProjectTasks.html
+++ b/public/ProjectTasks.html
@@ -75,6 +75,12 @@
           <textarea id="task-description" name="description" rows="4" placeholder="Введите описание задачи"></textarea>
         </div>
         <div class="form-group">
+          <label for="task-stage">Этап проекта (необязательно)</label>
+          <select id="task-stage" name="stageId" class="sort-select">
+            <option value="">Без привязки к этапу</option>
+          </select>
+        </div>
+        <div class="form-group">
           <label for="task-files">Файлы (необязательно)</label>
           <input type="file" id="task-files" name="files" multiple>
           <div class="files-preview" id="task-files-preview"></div>
